2015-05-04  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Windows/Interop.Windows.Backup.cs:
	  Added backup functions that allow to access ADSs and EAs on
	  any Windows NT version.

	* Interop/Windows/Interop.Windows.EAs.cs:
	* Interop/Windows/Interop.Windows.Files.cs:
	  Code enhancement.

2015-05-04  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Windows/Interop.Windows.Streams.cs:
	  Added Windows Server 2003 onward functions to search for
	  alternate data streams.

2015-05-04  Natalia Portillo  <claunia@claunia.com>

	* Interop/Windows/Interop.Windows.Files.cs:
	* Interop/Windows/Interop.Windows.Libraries.cs:
	  Added kernel32's CreateFile().

2015-05-04  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Windows/Interop.Windows.Files.cs:
	* Interop/Windows/Interop.Windows.types.cs:
	  Implemented NtCreateFile() calling to get file handles and
	  NtClose() to dispose of them.

2015-05-04  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Windows/Interop.Windows.EAs.cs:
	  Implement callings for Extended Attributes on NT.

	* Interop/Windows/Interop.Windows.Errors.cs:
	* Interop/Windows/Interop.Windows.Libraries.cs:
	  Typo.

2015-05-04  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Windows/Interop.Windows.Errors.cs:
	* Interop/Windows/Interop.Windows.Libraries.cs:
	  Added Windows NT libraries and errors.

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Interop/FreeBSD/Interop.FreeBSD.extattr.cs:
	  Correct extern declarations.

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/FreeBSD/Interop.FreeBSD.extattr.cs:
	  Implemented FreeBSD's extattr(2).

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/FreeBSD/Interop.FreeBSD.types.cs:
	* Interop/FreeBSD/Interop.FreeBSD.statfs.cs:
	  Implement FreeBSD's statfs(2).
