@@ -1,3 +1,9 @@
+2015-05-07  Natalia Portillo  <claunia@claunia.com>
+
+	* Claunia.IO.csproj:
+	* Interop/Windows/Interop.Windows.Volumes.cs:
+	  Added Kernel32's GetVolumeInformation.
+
 2015-05-04  Natalia Portillo  <claunia@claunia.com>
 
 	* Claunia.IO.csproj:
